[Neovim] Fix syntax.

--- a/templates/nvim/lua/user_treesitter.lua.j2
+++ b/templates/nvim/lua/user_treesitter.lua.j2
@@ -23,8 +23,8 @@ require('nvim-treesitter.configs').setup {
     "norg",
     "norg_meta",
     "norg_table",
+    "markdown",
     {{ treesitter_parsers_file or "-- No Extra Treesitter Parsers Installed" }}
-    "markdown"
   },
   highlight = {
     enable = true, -- false will disable the whole extension
