[Neovim] Add more treesitter parsers.

--- a/templates/nvim/lua/user_treesitter.lua.j2
+++ b/templates/nvim/lua/user_treesitter.lua.j2
@@ -24,6 +24,9 @@ require('nvim-treesitter.configs').setup {
     "norg_meta",
     "norg_table",
     "markdown",
+    "nix",
+    "lua",
+    "bash",
     {{ treesitter_parsers_file or "-- No Extra Treesitter Parsers Installed" }}
   },
   highlight = {
