[Neovim] Switch to treesitter compatible colorscheme.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -31,7 +31,7 @@ require('packer').startup(function()
   }
   use {'akinsho/bufferline.nvim', requires = 'kyazdani42/nvim-web-devicons'}
   -- Theme
-  use { "ellisonleao/gruvbox.nvim" }
+  use 'RRethy/nvim-base16'
   -- Add indentation guides even on blank lines
   use 'lukas-reineke/indent-blankline.nvim'
   -- Add git related info in the signs columns and popups
@@ -138,7 +138,8 @@ vim.wo.signcolumn = 'yes'
 
 -- Set colorscheme
 vim.o.termguicolors = true
-vim.cmd [[colorscheme gruvbox]]
+-- vim.cmd [[colorscheme gruvbox]]
+vim.cmd('colorscheme base16-gruvbox-dark-soft')
 
 -- Set completeopt to have a better completion experience
 vim.o.completeopt = 'menuone,noselect'
