--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -358,7 +358,7 @@ vim.g.asynctasks_term_reuse = 1
 
 -- Project Config Settings
 require('nvim-projectconfig').setup({
-  project_dir = "{{ nvim_projects_dir }}",
+  project_dir = "{{ nvim_projects_dir }}/",
   autocmd = true
 })
 
