--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -20,7 +20,7 @@ nnoremap("<C-l>", "<C-w>l", "silent", "Split/Window: Move Right")
 
 -- Terminal Mappings
 vim.cmd('tunmap <C-[>')
-tnoremap("<C-]>", "<C-\><C-n>", "silent", "Terminal: Exit Insert Mode")
+tnoremap("<C-]>", "<C-\\><C-n>", "silent", "Terminal: Exit Insert Mode")
 
 -- WinShift Mappings
 m.nname("<leader>w", "WinShift")
