--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -19,7 +19,7 @@ nnoremap("<C-k>", "<C-w>k", "silent", "Split/Window: Move Up")
 nnoremap("<C-l>", "<C-w>l", "silent", "Split/Window: Move Right")
 
 -- Terminal Mappings
-vim.cmd('tunmap <C-[>')
+-- vim.cmd('tunmap <C-[>')
 tnoremap("<C-]>", "<C-\\><C-n>", "silent", "Terminal: Exit Insert Mode")
 
 -- WinShift Mappings
