--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -95,6 +95,8 @@ require('packer').startup(function()
   }
   -- Neorg/Org Mode
   use { 'nvim-neorg/neorg', requires = { 'nvim-lua/plenary.nvim' } }
+  -- Formatter
+  use 'sbdchd/neoformat'
   -- Language Server Protocol Providers
 {{ lsp_provider_lspconfig_file or "-- No LSP Providers Installed" }}
   -- Language Server Protocol Providers(End)
@@ -370,6 +372,9 @@ require('user_toggleterm')
 
 -- Neorg Settings
 require('user_neorg')
+
+-- Neoformat Settings
+require('user_neoformat')
 
 -- Main Keymaps
 require('user_keymaps')
