--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -21,6 +21,10 @@ nnoremap("<C-l>", "<C-w>l", "silent", "Split/Window: Move Right")
 -- Terminal Mappings
 -- vim.cmd('tunmap <C-[>')
 tnoremap("<C-]>", "<C-\\><C-n>", "silent", "Terminal: Exit Insert Mode")
+tnoremap("<C-h>", "<C-\\><C-n><C-W>h", "silent", "Terminal: Change Split Left")
+tnoremap("<C-j>", "<C-\\><C-n><C-W>j", "silent", "Terminal: Change Split Down")
+tnoremap("<C-k>", "<C-\\><C-n><C-W>k", "silent", "Terminal: Change Split Up")
+tnoremap("<C-l>", "<C-\\><C-n><C-W>l", "silent", "Terminal: Change Split Right")
 
 -- WinShift Mappings
 m.nname("<leader>w", "WinShift")
