--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -77,7 +77,9 @@ require('packer').startup(function()
   }
   use 'akinsho/toggleterm.nvim'
   use 'kevinhwang91/rnvimr'
+  -- Git Plugins
   use 'kdheepak/lazygit.nvim'
+  use { 'sindrets/diffview.nvim', requires = 'nvim-lua/plenary.nvim' }
   -- Task Runner
   use { 'skywind3000/asynctasks.vim',
     requires = { 'skywind3000/asyncrun.vim', 'skywind3000/asyncrun.extra' }
