--- a/templates/nvim/lua/user_neoformat.lua.j2
+++ b/templates/nvim/lua/user_neoformat.lua.j2
@@ -1,5 +1,5 @@
-vim.g.neoformat_enabled_shell = "['shfmt']"
-vim.g.neoformat_enabled_yaml = "['prettier']"
-vim.g.neoformat_enabled_json = "['prettier']"
-vim.g.shfmt_opt="-ci"
-{{ neoformat_plugin_settings_file or "-- No Languages Configured for Formatting" }}
+vim.cmd([[ let g:neoformat_enabled_shell = ['shfmt'] ]])
+vim.cmd([[ let g:neoformat_enabled_yaml = ['prettier'] ]])
+vim.cmd([[ let g:neoformat_enabled_json = ['prettier'] ]])
+vim.cmd([[ let g:shfmt_opt="-ci" ]])
+{{ neoformat_plugin_settings_file or "\" No Languages Configured for Formatting" }}
