[Neovim] Use floaterm ranger.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -53,8 +53,7 @@ nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Floaterm: Select Termina
 nnoremap("<leader>sg", "<Cmd>LazyGit<CR>", "silent", "Floaterm: Lazygit")
 -- nnoremap("<leader>sb", "<Cmd>FloatermNew broot<CR>", "silent", "Floaterm: Broot")
 nnoremap("<leader>sb", "<Cmd>Broot<CR>", "silent", "Floaterm: Broot")
--- nnoremap("<leader>sr", "<Cmd>FloatermNew ranger<CR>", "silent", "Floaterm: Ranger")
-nnoremap("<leader>sr", "<Cmd>Ranger<CR>", "silent", "Floaterm: Ranger")
+nnoremap("<leader>sr", "<Cmd>FloatermNew ranger<CR>", "silent", "Floaterm: Ranger")
 nnoremap("<leader>s/", "<Cmd>2ToggleTerm<CR>", "silent", "ToggleTerm: Double Terminal")
 nnoremap("<leader>st", "<Cmd>3ToggleTerm<CR>", "silent", "ToggleTerm: Triple Terminal")
 nnoremap("<leader>sx", "<Cmd>ToggleTerm size=20 direction=horizontal<CR>", "silent", "ToggleTerm: Horizontal Terminal")
