--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -47,8 +47,8 @@ nnoremap("<C-]>", ":noh<CR>", "silent", "HLSLens: Clear Search Result")
 m.nname("<leader>s", "Floaterm")
 tnoremap("<C-/>", "<Cmd>ToggleTerm<CR>", "silent", "ToggleTerm: Toggle Terminal")
 nnoremap("<C-s>", "<Cmd>FloatermNew<CR>", "silent", "Floaterm: New Terminal")
-nnoremap("<C-p>", "<Cmd>FloatermPrev<CR>", "silent", "Floaterm: Previous Terminal")
-nnoremap("<C-n>", "<Cmd>FloatermNext<CR>", "silent", "Floaterm: Next Terminal")
+tnoremap("<C-o>", "<Cmd>FloatermPrev<CR>", "silent", "Floaterm: Previous Terminal")
+tnoremap("<C-i>", "<Cmd>FloatermNext<CR>", "silent", "Floaterm: Next Terminal")
 nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Floaterm: Select Terminal")
 nnoremap("<leader>sg", "<Cmd>LazyGit<CR>", "silent", "Floaterm: Lazygit")
 -- nnoremap("<leader>sb", "<Cmd>FloatermNew broot<CR>", "silent", "Floaterm: Broot")
