[Neovim] Use floaterm broot.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -51,8 +51,7 @@ tnoremap("<C-o>", "<Cmd>FloatermPrev<CR>", "silent", "Floaterm: Previous Termina
 tnoremap("<C-i>", "<Cmd>FloatermNext<CR>", "silent", "Floaterm: Next Terminal")
 nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Floaterm: Select Terminal")
 nnoremap("<leader>sg", "<Cmd>LazyGit<CR>", "silent", "Floaterm: Lazygit")
--- nnoremap("<leader>sb", "<Cmd>FloatermNew broot<CR>", "silent", "Floaterm: Broot")
-nnoremap("<leader>sb", "<Cmd>Broot<CR>", "silent", "Floaterm: Broot")
+nnoremap("<leader>sb", "<Cmd>FloatermNew broot<CR>", "silent", "Floaterm: Broot")
 nnoremap("<leader>sr", "<Cmd>FloatermNew ranger<CR>", "silent", "Floaterm: Ranger")
 nnoremap("<leader>s/", "<Cmd>2ToggleTerm<CR>", "silent", "ToggleTerm: Double Terminal")
 nnoremap("<leader>st", "<Cmd>3ToggleTerm<CR>", "silent", "ToggleTerm: Triple Terminal")
