[Neovim] Disable terminal unmap.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -44,7 +44,7 @@ nnoremap("g#", "g#<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Nea
 nnoremap("<C-]>", ":noh<CR>", "silent", "HLSLens: Clear Search Result")
 
 -- Terminal Plugin Mappings
-vim.cmd('tunmap <Tab>')
+-- vim.cmd('tunmap <Tab>')
 m.nname("<leader>s", "Floaterm")
 tnoremap("<C-/>", "<Cmd>ToggleTerm<CR>", "silent", "ToggleTerm: Toggle Terminal")
 nnoremap("<C-s>", "<Cmd>FloatermNew<CR>", "silent", "Floaterm: New Terminal")
