[Neovim] Move in desperation.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -355,4 +355,6 @@ require('user_neoformat')
 -- Main Keymaps
 require('user_keymaps')
 
+-- Last Minute Config
+vim.cmd([[ tunmap <Tab> ]])
 -- vim: ts=2 sts=2 sw=2 et
