[Neovim] Disable tunmap.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -20,6 +20,7 @@ nnoremap("<C-l>", "<C-w>l", "silent", "Split/Window: Move Right")
 
 -- Terminal Mappings
 -- vim.cmd('tunmap <C-[>')
+-- vim.cmd('tunmap <tab>')
 tnoremap("<C-]>", "<C-\\><C-n>", "silent", "Terminal: Exit Insert Mode")
 tnoremap("<C-h>", "<C-\\><C-n><C-W>h", "silent", "Terminal: Change Split Left")
 tnoremap("<C-j>", "<C-\\><C-n><C-W>j", "silent", "Terminal: Change Split Down")
