--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -32,7 +32,7 @@ require('packer').startup(function()
   use {'akinsho/bufferline.nvim', requires = 'kyazdani42/nvim-web-devicons'}
   -- Theme
   -- use 'RRethy/nvim-base16'
-  use 'ellisonleao/gruvbox.nvim'
+  use 'sainnhe/gruvbox-material'
   -- Add indentation guides even on blank lines
   use 'lukas-reineke/indent-blankline.nvim'
   -- Add git related info in the signs columns and popups
@@ -165,7 +165,7 @@ vim.wo.signcolumn = 'yes'
 -- Set colorscheme
 vim.opt.termguicolors = true
 vim.o.background = "dark" -- or "light" for light mode
-vim.cmd([[colorscheme gruvbox]])
+vim.cmd([[colorscheme gruvbox-material]])
 -- vim.cmd('colorscheme base16-gruvbox-dark-medium')
 
 -- Set completeopt to have a better completion experience
