[Neovim] Add language specific lua plugin settings.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -305,6 +305,9 @@ require('user_neoformat')
 -- Main Keymaps
 require('user_keymaps')
 
+-- User Language Plugin Settings
+require('user_languages')
+
 -- Last Minute Config
 
 -- vim: ts=2 sts=2 sw=2 et
