--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -43,6 +43,13 @@ require('packer').startup(function()
   use 'kevinhwang91/nvim-hlslens'
   use { 'petertriho/nvim-scrollbar', requires = { 'kevinhwang91/nvim-hlslens' } }
   -- Additional textobjects for treesitter
+  use {'ray-x/navigator.lua', requires = {
+    'nvim-treesitter/nvim-treesitter',
+    'nvim-treesitter/nvim-treesitter-textobjects',
+    'ray-x/guihua.lua',
+    run = 'cd lua/fzy && make'
+    }
+  }
   use 'nvim-treesitter/nvim-treesitter-textobjects'
   use 'neovim/nvim-lspconfig' -- Collection of configurations for built-in LSP client
   use 'hrsh7th/nvim-cmp' -- Autocompletion plugin
