[Neovim] Disable cursorline timeout.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -146,7 +146,7 @@ vim.cmd [[
 vim.env.GIT_EDITOR = "{{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'"
 
 -- Cursorline
-vim.g.cursorline_timeout = 200
+-- vim.g.cursorline_timeout = 100
 vim.wo.cursorline = true
 
 -- Set highlight on search
