--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -16,11 +16,11 @@ vim.cmd [[
 
 local use = require('packer').use
 require('packer').startup(function()
+  -- Packer Plugin Manager
   use 'wbthomason/packer.nvim' -- Package manager
-  use 'tpope/vim-fugitive' -- Git commands in nvim
-  use 'tpope/vim-rhubarb' -- Fugitive-companion to interact with github
+  -- Comments
   use 'numToStr/Comment.nvim' -- "gc" to comment visual regions/lines
-  -- UI to select things (files, grep results, open buffers...)
+  -- Selection UI
   use { 'nvim-telescope/telescope.nvim', requires = { 'nvim-lua/plenary.nvim' } }
   use {'nvim-telescope/telescope-fzf-native.nvim', run = 'make' }
   -- Status/Tab Line
@@ -30,15 +30,15 @@ require('packer').startup(function()
     }
   }
   use {'akinsho/bufferline.nvim', requires = 'kyazdani42/nvim-web-devicons'}
+  use 'nanozuki/tabby.nvim'
   -- Theme
-  -- use 'RRethy/nvim-base16'
   use 'sainnhe/gruvbox-material'
   -- Add indentation guides even on blank lines
   use 'lukas-reineke/indent-blankline.nvim'
   -- Add git related info in the signs columns and popups
   use { 'lewis6991/gitsigns.nvim', requires = { 'nvim-lua/plenary.nvim' } }
   -- Highlight, edit, and navigate code using a fast incremental parsing library
-  use 'nvim-treesitter/nvim-treesitter'
+  use {'nvim-treesitter/nvim-treesitter', run = ':TSUpdate'}
   -- Better Highlighting
   use 'kevinhwang91/nvim-hlslens'
   use { 'petertriho/nvim-scrollbar', requires = { 'kevinhwang91/nvim-hlslens' } }
@@ -180,9 +180,8 @@ vim.wo.signcolumn = 'yes'
 
 -- Set colorscheme
 vim.opt.termguicolors = true
-vim.o.background = "dark" -- or "light" for light mode
+vim.o.background = "dark"
 vim.cmd([[colorscheme gruvbox-material]])
--- vim.cmd('colorscheme base16-gruvbox-dark-medium')
 
 -- Set completeopt to have a better completion experience
 vim.o.completeopt = 'menuone,noselect'
@@ -194,7 +193,9 @@ require('user_treesitter')
 require('user_statusline')
 
 -- Set Tabline
-require("bufferline").setup{}
+require("tabby").setup({
+    tabline = require("tabby.presets").active_wins_at_tail,
+})
 
 -- Enable Comment.nvim
 require('Comment').setup()
