--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -30,7 +30,7 @@ require('packer').startup(function()
   }
   use {
     'kdheepak/tabline.nvim',
-    requires = { { 'hoob3rt/lualine.nvim', opt=true }, {'kyazdani42/nvim-web-devicons', opt = true} }
+    requires = { { 'nvim-lualine/lualine.nvim', opt=true }, {'kyazdani42/nvim-web-devicons', opt = true} }
   }
   use {'TC72/telescope-tele-tabby.nvim', requires = 'nvim-telescope/telescope.nvim'}
   -- Theme
