--- a/templates/nvim/lua/user_lsp.lua.j2
+++ b/templates/nvim/lua/user_lsp.lua.j2
@@ -8,28 +8,20 @@ local capabilities = vim.lsp.protocol.make_client_capabilities()
 capabilities = require('cmp_nvim_lsp').update_capabilities(capabilities)
 
 -- Enable the following language servers
--- local servers = {
---   'yamllint',
---   'bash-language-server'
--- }
--- 
--- for _, lsp in ipairs(servers) do
---   lspconfig[lsp].setup {
---     on_attach = on_attach,
---     capabilities = capabilities,
---   }
--- end
-require'lspconfig'.ansiblels.setup{}
-require'lspconfig'.bashls.setup{}
+local servers = {
+  'ansiblels',
+  'bashls'
+}
+
+for _, lsp in ipairs(servers) do
+  lspconfig[lsp].setup {
+    on_attach = on_attach,
+    capabilities = capabilities,
+  }
+end
 {{ lsp_provider_lspconfig_setup_file or "-- No Extra Lsp Providers Installed" }}
 
--- Example custom server
--- Make runtime files discoverable to the server
-local runtime_path = vim.split(package.path, ';')
-table.insert(runtime_path, 'lua/?.lua')
-table.insert(runtime_path, 'lua/?/init.lua')
-
-lspconfig.sumneko_lua.setup {
+lspconfig[lsp].sumneko_lua.setup {
   on_attach = on_attach,
   capabilities = capabilities,
   settings = {
