--- a/templates/nvim/lua/user_lsp.lua.j2
+++ b/templates/nvim/lua/user_lsp.lua.j2
@@ -1,4 +1,4 @@
-local lspconfig = require 'lspconfig'
+local lspconfig = require('lspconfig')
 local on_attach = function(_, bufnr)
   vim.cmd [[ command! Format execute 'lua vim.lsp.buf.formatting()' ]]
 end
@@ -21,7 +21,7 @@ for _, lsp in ipairs(servers) do
 end
 {{ lsp_provider_lspconfig_setup_file or "-- No Extra Lsp Providers Installed" }}
 
-lspconfig[lsp].sumneko_lua.setup {
+lspconfig['sumneko_lua'].setup {
   on_attach = on_attach,
   capabilities = capabilities,
   settings = {
