[Neovim] Fix navigator mapping.

--- a/templates/nvim/lua/user_lsp.lua.j2
+++ b/templates/nvim/lua/user_lsp.lua.j2
@@ -59,7 +59,7 @@ require'navigator'.setup({
     { key = 'gs', func = "require('navigator.symbols').document_symbols()" },
     { key = 'gS', func = "require('navigator.workspace').workspace_symbol()" },
     { key = 'gr', func = "require('navigator.reference').reference()" },
-    { key = 'Gr', func = "require('navigator.reference').async_ref()" },
+    { key = 'gR', func = "require('navigator.reference').async_ref()" },
     { key = 'K', func = 'hover({ popup_opts = { border = single, max_width = 80 }})' },
     { key = '<Leader>k', func = "require('navigator.dochighlight').hi_symbol()" },
     { key = '<Leader>K', func = 'signature_help()' },
