[Zellij] Fix work layout.

--- a/templates/zellij/layouts/work.yaml.j2
+++ b/templates/zellij/layouts/work.yaml.j2
@@ -4,12 +4,23 @@ session:
 
 template:
   direction: Horizontal
-    run:
-      plugin:
-        location: "zellij:tab-bar"
-    run:
-      plugin:
-        location: "zellij:status-bar"
+  parts:
+    - direction: Vertical  # part 1
+      borderless: true
+      split_size:
+        Fixed: 1
+      run:
+        plugin:
+          location: "zellij:tab-bar"
+    - direction: Vertical # part 2
+      body: true
+    - direction: Vertical # part 3
+      borderless: true
+      split_size:
+        Fixed: 2
+      run:
+        plugin:
+          location: "zellij:status-bar"
 
 tabs:
   - direction: Vertical
