--- a/templates/zellij/layouts/work.yaml.j2
+++ b/templates/zellij/layouts/work.yaml.j2
@@ -25,5 +25,9 @@ template:
 tabs:
   - direction: Vertical
     name: "Dotfiles"
+    run:
+      command: {cmd: cd {{ dotfiles_checkout_dir }} && {{ nvim_shell }}}
   - direction: Vertical
     name: "Code"
+    run:
+      command: {cmd: cd {{ code_checkout_path_github }} && {{ nvim_shell }}}
