[Zellij,Zsh] Add starting directory to zellij tabs.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -257,3 +257,11 @@ export POWERLEVEL10K_MODE=nerdfont-complete
 {{ nix_bin }}/macchina
 # END: Screenfetch
 ###############################################################################
+
+###############################################################################
+# BEGIN: Starting Directory
+if [[ -z "${ZELLIJ_STARTING_DIR}" ]]; then
+  cd ${ZELLIJ_STARTING_DIR}
+fi
+# END: Starting Directory
+###############################################################################
