--- a/templates/zellij/layouts/work.yaml.j2
+++ b/templates/zellij/layouts/work.yaml.j2
@@ -26,8 +26,8 @@ tabs:
   - direction: Vertical
     name: "Dotfiles"
     run:
-      command: {cmd: cd {{ dotfiles_checkout_dir }} && {{ nvim_shell }}}
+      command: {cmd: ZELLIJ_STARTING_DIR={{ dotfiles_checkout_dir }} {{ nvim_shell }}}
   - direction: Vertical
     name: "Code"
     run:
-      command: {cmd: cd {{ code_checkout_path_github }} && {{ nvim_shell }}}
+      command: {cmd: ZELLIJ_STARTING_DIR={{ code_checkout_path_github }} {{ nvim_shell }}}
