--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -53,7 +53,9 @@ require('packer').startup(function()
     }
   }
   use 'nvim-treesitter/nvim-treesitter-textobjects'
-  use 'neovim/nvim-lspconfig' -- Collection of configurations for built-in LSP client
+  use "IndianBoy42/tree-sitter-just"
+  -- LSP Plugins
+  use 'neovim/nvim-lspconfig'
   use 'hrsh7th/nvim-cmp' -- Autocompletion plugin
   use 'hrsh7th/cmp-nvim-lsp'
   use 'saadparwaiz1/cmp_luasnip'
