--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -41,10 +41,11 @@ if [ -n "${commands[fzf-share]}" ]; then
   source "$(fzf-share)/key-bindings.zsh"
   source "$(fzf-share)/completion.zsh"
 fi
-# eval "$(starship init zsh)"
-eval "$(direnv hook zsh)"
-eval "$(zoxide init zsh)"
-# eval "$(navi widget zsh)"
+# eval "$({{ nix_bin }}/starship init zsh)"
+eval "$({{ nix_bin }}/direnv hook zsh)"
+eval "$({{ nix_bin }}/zoxide init zsh)"
+# eval "$({{ nix_bin }}/navi widget zsh)"
+eval "$({{ nix_bin }}/just --completions zsh)"
 _navi_call() {
    local result="$({{ nix_bin }}/navi "$@" </dev/tty)"
    printf "%s" "$result"
