[Zsh,Just] Fix completion.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -8,7 +8,7 @@ bindkey -v
 # End of lines configured by zsh-newuser-install
 # The following lines were added by compinstall
 zstyle :compinstall filename '/home/{{ zsh_username }}/.zshrc'
-
+fpath=({{ zsh_completions }} $fpath)
 autoload -Uz compinit
 compinit
 # End of lines added by compinstall
