--- a/templates/zellij/layouts/work.yaml.j2
+++ b/templates/zellij/layouts/work.yaml.j2
@@ -26,8 +26,8 @@ tabs:
   - direction: Vertical
     name: "Dotfiles"
     run:
-      command: {cmd: ZELLIJ_STARTING_DIR={{ dotfiles_checkout_dir }} {{ nvim_shell }}}
+      command: {cmd: {{ nvim_shell }}, args: ["-c", "cd {{ dotfiles_checkout_dir }} && exec {{ nvim_shell }}"]}
   - direction: Vertical
     name: "Code"
     run:
-      command: {cmd: ZELLIJ_STARTING_DIR={{ code_checkout_path_github }} {{ nvim_shell }}}
+      command: {cmd: {{ nvim_shell }}, args: ["-c", "cd {{ code_checkout_path_github }} && exec {{ nvim_shell }}"]}
