[Zellij,Zsh] Disable starting directory command in zshrc.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -260,8 +260,8 @@ export POWERLEVEL10K_MODE=nerdfont-complete
 
 ###############################################################################
 # BEGIN: Starting Directory
-if [[ -z "${ZELLIJ_STARTING_DIR}" ]]; then
-  cd ${ZELLIJ_STARTING_DIR}
-fi
+# if [[ -z "${ZELLIJ_STARTING_DIR}" ]]; then
+#   cd ${ZELLIJ_STARTING_DIR}
+# fi
 # END: Starting Directory
 ###############################################################################
