--- a/templates/nvim/lua/user_completion.lua.j2
+++ b/templates/nvim/lua/user_completion.lua.j2
@@ -1,3 +1,6 @@
+-- Set completeopt to have a better completion experience
+vim.o.completeopt = 'menuone,noselect'
+
 local cmp = require 'cmp'
 cmp.setup {
   snippet = {
