[Zsh,Bash,Git,SSH] Fix ssh git.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -32,6 +32,7 @@ else
     export VISUAL="{{ nix_bin }}/nvim"
     export EDITOR="{{ nix_bin }}/nvim"
 fi
+export GIT_SSH="{{ git_ssh }}"
 # END: Environment
 ###############################################################################
 
