--- a/templates/bash/bashrc.j2
+++ b/templates/bash/bashrc.j2
@@ -12,6 +12,7 @@ then
     PATH="$HOME/.local/bin:$HOME/bin:$PATH"
 fi
 export PATH
+export GIT_SSH="{{ git_ssh }}"
 
 # Uncomment the following line if you don't like systemctl's auto-paging feature:
 # export SYSTEMD_PAGER=
