--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -156,6 +156,14 @@ vim.wo.cursorline = true
 -- Set highlight on search
 vim.o.hlsearch = true
 
+-- Tab/Space Settings
+vim.o.autoindent = true
+vim.o.expandtab = true
+vim.o.shiftwidth = 4
+vim.o.smartindent = true
+vim.o.softtabstop = 4
+vim.o.tabstop = 4
+
 -- Set Scrollbar
 require("scrollbar").setup()
 require("scrollbar.handlers.search").setup()
