[Neovim] Fix cmp luasnip expansion.

--- a/templates/nvim/lua/user_completion.lua.j2
+++ b/templates/nvim/lua/user_completion.lua.j2
@@ -1,11 +1,10 @@
 -- Set completeopt to have a better completion experience
 vim.o.completeopt = 'menuone,noselect'
 
-local cmp = require 'cmp'
-cmp.setup {
+require'cmp'.setup {
   snippet = {
     expand = function(args)
-      luasnip.lsp_expand(args.body)
+      require('luasnip').lsp_expand(args.body)
     end,
   },
   completion = {
