[Neovim] Add better nvim-cmp/luasnip integration.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -244,11 +244,11 @@ require('telescope').setup {
 -- Enable telescope fzf native
 require('telescope').load_extension 'fzf'
 
--- luasnip setup
-local luasnip = require 'luasnip'
-
 -- nvim-cmp setup
 require('user_completion')
+
+-- LuaSnip setup
+require('user_snippet')
 
 -- LSP settings
 require('user_lsp')
